<resources>
    <string name="app_name">IntroduceMyself</string>
    <string name="signup_name">이름</string>
    <string name="signup_hintName">이름을 입력하세요.</string>
    <string name="signup_id">아이디</string>
    <string name="signup_hintId">아이디를 입력하세요.</string>
    <string name="signup_pw">비밀번호</string>
    <string name="signup_hintPW">비밀번호를 입력하세요.</string>
    <string name="signup_signupbtn">회원가입</string>
    <string name="signup_loginbtn">로그인</string>
    <string name="home_name">이름 : 김민지</string>
    <string name="home_career">목표 : 세상을 이롭게 하는 사업가</string>
    <string name="home_mbti">MBTI : ISTJ</string>
    <string name="home_introduce">한마디 : 11월이 오긴 오나요</string>
    <string name="home_finishbtn">종료</string>
    <string name="home_intro">Introduce Myself</string>

</resources>