<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/image1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginVertical="30dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/cb_id"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/cb_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/home_name" />

        <CheckBox
            android:id="@+id/cb_career"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/home_career" />

        <CheckBox
            android:id="@+id/cb_mbti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:text="@string/home_mbti" />

        <CheckBox
            android:id="@+id/cb_introduce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:text="@string/home_introduce" />

        <android.widget.Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:drawableStart="@drawable/imagebtn"
            android:drawablePadding="-100dp"
            android:paddingStart="50dp"
            android:text="@string/home_finishbtn"
            android:textColor="@drawable/txtcolor"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>


</LinearLayout>